--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 ---
-layout: layouts/base.njk
+layout: layouts/base.liquid
 permalink: index.html
-section: home
 ---
 <p>Hi, I'm Whit Waltman. This is my public notebook.</p>
 
@@ -12,3 +11,12 @@ to find a form that accommodates the mess</a>.</p>
 <p>Questions? Comments? Fun facts? Send 'em to:
 <span style="border: 1px solid var(--lime-400); background-color: var(--lime-100); padding: 0 4px; border-radius: 4px;">
 whitwaltman at mailbox dot org</span>.</p>
+
+<form method="get">
+    <button type="submit">Submit</button>
+
+    <my-counter @name="first" @value="3"></my-counter>
+    <my-counter @name="second" @value="5"></my-counter>
+    <my-counter @name="third" @value="6"></my-counter>
+    <my-counter @name="fourth" @value="10"></my-counter>
+</form>
